Added lesson about interfaces, libraries.

--- a/using-hardhat/package.json
+++ b/using-hardhat/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat coverage",
+    "test-one": " npx hardhat test --grep",
     "compile": "npx hardhat compile"
   },
   "author": "",
