--- a/using-nuxt-hardhat/frontend/package.json
+++ b/using-nuxt-hardhat/frontend/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.6.5",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.13",
+    "set-interval-async": "^2.0.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
