Added lotery contract with test.

--- a/using-hardhat/package.json
+++ b/using-hardhat/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat coverage",
-    "test-one": "npx hardhat test --grep",
+    "test-one": "npx hardhat test",
     "compile": "npx hardhat compile"
   },
   "author": "",
